cmake_minimum_required(VERSION 3.15.0)

project(KnapsackWithConflictsSolver LANGUAGES CXX)

option(KNAPSACKWITHCONFLICTSSOLVER_BUILD_TEST "Build unit tests" ON)
option(KNAPSACKWITHCONFLICTSSOLVER_BUILD_MAIN "Build main" ON)

option(KNAPSACKWITHCONFLICTSSOLVER_USE_CBC "Use Cbc" OFF)
option(KNAPSACKWITHCONFLICTSSOLVER_USE_HIGHS "Use HiGHS" OFF)
option(KNAPSACKWITHCONFLICTSSOLVER_USE_XPRESS "Use XPRESS" OFF)
option(KNAPSACKWITHCONFLICTSSOLVER_USE_DLIB "Use dlib" OFF)
option(KNAPSACKWITHCONFLICTSSOLVER_USE_CONICBUNDLE "Use ConicBundle" OFF)

# Avoid FetchContent warning.
cmake_policy(SET CMP0135 NEW)

# Require C++14.
set(CMAKE_CXX_STANDARD 14)

# Enable output of compile commands during generation.
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Add sub-directories.
add_subdirectory(extern)
add_subdirectory(src)
if(KNAPSACKWITHCONFLICTSSOLVER_BUILD_TEST)
    add_subdirectory(test)
endif()
